# oldpart

./: .gitignore  CMakeLists.txt
3rd/boost_process/: process.hpp
3rd/boost_process/process/: child.hpp  config.hpp  context.hpp  operations.hpp  pistream.hpp  posix_child.hpp  posix_context.hpp  posix_operations.hpp  posix_status.hpp  postream.hpp  process.hpp  self.hpp  status.hpp  stream_behavior.hpp  win32_child.hpp  win32_context.hpp  win32_operations.hpp
3rd/boost_process/process/detail/: file_handle.hpp  pipe.hpp  posix_ops.hpp  stream_info.hpp  systembuf.hpp  win32_ops.hpp
cmake/: linktcmalloc.cmake
common/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  IConnectionManager.h  IOContextPool.cpp  IOContextPool.h  MSocket.cpp  MSocket.h  MessageDispatcher.cpp  MessageDispatcher.h  OEnum.h  OMessage.cpp  OMessage.h  OProtoBase.cpp  OProtoBase.h  OProtoResponseGuard.cpp  OProtoResponseGuard.h  OSerializer.cpp  OSerializer.h  SPSCArray.h  SysLogger.h  TClient.cpp  TClient.h  TServer.cpp  TServer.h  TSocket.cpp  TSocket.h  Utils.h
common/compress/: CMakeLists.txt  ZLibCompress.h  ZLibCompressBuf.cpp  ZLibCompressBuf.h  ZLibUnCompressBuf.cpp  ZLibUnCompressBuf.h
common/crypto/: CMakeLists.txt  DfcCrypto.cpp  DfcCrypto.h  Md5.cpp  Md5.h
opc/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  OPCBasic.cpp  OPCBasic.h  README  main.cpp
opp/: CMakeCache.txt  CMakeLists.txt  Discover.h  IOStream.cpp  IOStream.h  OPCBasic.h  OPCBasicProto.cpp  OPCBasicProto.h
ops/: ops.py  sender.cpp
test/: CMakeLists.txt
test/cryptoTest/: CMakeLists.txt  main.cpp
test/serializeTest/: CMakeLists.txt  LessThan1Buf.cpp  MoreThan1Buf.cpp  RecursiveSerialize.cpp  VectorTest.cpp  main.cpp
