cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type")


SET(TARGET cryptoTest)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(${TARGET}_SUBDIRS .)

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} tbbmalloc)
set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
#set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")

#cotire(${TARGET})
TARGET_LINK_LIBRARIES(${TARGET} common)
TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)
TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
TARGET_LINK_LIBRARIES(${TARGET} stdc++fs)
TARGET_LINK_LIBRARIES(${TARGET} pthread)

INSTALL(TARGETS ${TARGET}
        RUNTIME DESTINATION lib
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

FILE(GLOB_RECURSE ${TARGET}_HEADER_LISTS "*.h" "*.hpp")
INSTALL_FILES(include ${TARGET}_HEADER_LISTS)
